# python-ai-template

./: .editorconfig  .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.agents/: CONVENTIONS.md  INDEX.md  README.md
.agents/agents/: cavecrew-builder.md  cavecrew-investigator.md  cavecrew-reviewer.md
.agents/scripts/: README.md  audit.sh  bootstrap.sh  check.sh  clean.sh  context.sh  deps.sh  format.sh  lint.sh  validate.sh
.agents/subagents/architect/: README.md  SKILL.md
.agents/subagents/developer/: README.md  SKILL.md
.agents/subagents/documenter/: README.md  SKILL.md
.agents/subagents/maintainer/: README.md  SKILL.md
.agents/subagents/reviewer/: README.md  SKILL.md
.agents/subagents/tester/: README.md  SKILL.md
.agents/utilities/: git.md  python.md
.codex/: README.md  config.toml
examples/: print_version.py
src/python_ai_template/: __init__.py  cli.py  core.py
tests/: test_core.py
