[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "python-ai-template"
version = "0.1.0"
description = "Python project template for local AI-assisted development"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = "MIT"
authors = [{ name = "Sergei Borodin" }]
dependencies = []

[project.scripts]
python-ai-template = "python_ai_template.cli:main"

[dependency-groups]
dev = [
  "hypothesis>=6.136",
  "pip-audit>=2.9",
  "pytest>=8.4",
  "pytest-cov>=6.2",
  "ruff>=0.12",
]

[tool.hatch.build.targets.wheel]
packages = ["src/python_ai_template"]

[tool.pytest.ini_options]
addopts = [
  "--strict-config",
  "--strict-markers",
  "--cov=python_ai_template",
  "--cov-report=term-missing",
  "--cov-report=xml",
]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["python_ai_template"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.ruff]
line-length = 100
src = ["src", "tests", "examples"]
target-version = "py311"

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = [
  "B",
  "C4",
  "E",
  "F",
  "I",
  "PT",
  "RUF",
  "SIM",
  "UP",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]
